@@ -2,6 +2,7 @@ Revision history for File-Map
 
 {{$NEXT}}
           Fix madvice on old cygwin versions
+          Made strerror_r/strerror_s usage more robust
 
 0.47      2012-04-04 23:17:55 Europe/Amsterdam
           Restore fileno in sys_map; this fixes #76253: non-anonymous sys_map was useable since e102d034
